Updated section api.
